Render page correctly on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,8 @@ body {
 }
 
 #menu {
-    float: right;
+    position: fixed;
+    right: 0;
     padding: 1rem;
 }
 
